--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "prettier": "prettier --write .",
-    "test": "jest"
+    "test": "jest testing/tests"
   },
   "keywords": [
     "graphql",
