--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "prettier": "prettier --write .",
-    "test": "jest testing/tests"
+    "test": "jest testing/tests",
+    "publish": "npm run prettier && npm run test && npm run build && npm publish"
   },
   "keywords": [
     "graphql",
@@ -26,7 +27,8 @@
     "@graphql-tools/utils": "^9.1.3",
     "graphql": "^16.6.0",
     "graphql-codegen": "^0.4.0",
-    "graphql-tools": "^8.3.6"
+    "graphql-tools": "^8.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/typescript": "^2.7.3",
