--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gql-test-generator",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Forked from graphql-codegen-typescript-validation-schema. Getting something together to generate smoke tests automatically across resolvers.",
   "main": "dist/src/index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "@graphql-tools/utils": "^9.1.3",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.6",
+    "minimist": "^1.2.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
