--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gql-test-generator",
-  "version": "1.0.14",
-  "description": "Forked from graphql-codegen-typescript-validation-schema. Getting something together to generate smoke tests automatically across resolvers.",
+  "name": "graphql-scaffold",
+  "version": "1.0.0",
+  "description": "Scaffolds resolvers, tests, and file structure from a schema.",
   "main": "dist/src/index.js",
   "scripts": {
     "build": "tsc",
@@ -35,6 +35,7 @@
     "eslint": "^8.25.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.1.2",
+    "jest-cli": "^29.3.1",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "ts-lint": "^4.5.1",
@@ -44,6 +45,6 @@
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0 || ^16.0.0"
   },
   "bin": {
-    "gql-test-generator": "dist/src/index.js"
+    "graphql-scaffold": "dist/src/index.js"
   }
 }
