--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "graphql-scaffold",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Scaffolds resolvers, tests, and file structure from a schema.",
   "main": "dist/src/index.js",
   "scripts": {
     "build": "tsc",
     "prettier": "prettier --write .",
-    "test": "jest testing/tests",
+    "test": "jest testing/tests/getSchemaFilePath/index.spec.ts",
     "prePublish": "npm run prettier && npm run test && npm run build"
   },
   "keywords": [
@@ -23,6 +23,7 @@
     "@graphql-tools/graphql-file-loader": "^7.5.13",
     "@graphql-tools/load": "^7.8.8",
     "@graphql-tools/utils": "^9.1.3",
+    "glob": "^8.1.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.6",
     "minimist": "^1.2.7",
@@ -30,7 +31,9 @@
   },
   "devDependencies": {
     "@graphql-tools/apollo-engine-loader": "^7.3.13",
+    "@types/glob": "^8.0.0",
     "@types/jest": "^29.1.2",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^18.8.3",
     "eslint": "^8.25.0",
     "eslint-plugin-unused-imports": "^2.0.0",
